--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
 </head>
 <body>
-<h2>Flappy Burd</h2>
+<h2>Flappy Bird</h2>
 
 
     
 
-    <script src="background.js"></script>
-    <script src="main.js"></script>
+    <script src="javascript/background.js"></script>
+    <script src="javascript/player.js"></script>
+    <script src="javascript/game.js"></script>
+    <script src="javascript/main.js"></script>
 </body>
 </html>
