--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     
 
+    <script src="javascript/obstacle.js"></script>   
     <script src="javascript/background.js"></script>
     <script src="javascript/player.js"></script>
     <script src="javascript/game.js"></script>
