--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
 </head>
 <body>
-<h2>Flappy Bird</h2>
-<h5>Score: <span>0</span></h5>
+<h1>Flappy Bird</h1>
+<!-- <h3><span>0</span></h3> -->
 
 
     
