add score and game over

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
 <h1>Flappy Bird</h1>
-<!-- <h3><span>0</span></h3> -->
+<h2><span>0</span></h2>
 
-
-    
+<div id="game-over">
+<h3>GAME OVER</h3>
+<h4>SCORE: <span>0</span></h4>
+</div>
 
     <script src="javascript/obstacle.js"></script>   
     <script src="javascript/background.js"></script>
