--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <div id="game-over">
 <h3>GAME OVER</h3>
 <h4>SCORE: <span>0</span></h4>
+<h4 id="high-score">BEST: <span>0</span></h4>
 </div>
 
     <script src="javascript/obstacle.js"></script>   
