--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Flappy Bird</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
+    <script src="p5.js-sound/lib/p5.sound.js"></script>
 </head>
 <body>
 <h1>Flappy Bird</h1>
@@ -16,6 +17,7 @@
 <h3>GAME OVER</h3>
 <h4>SCORE: <span>0</span></h4>
 <h4 id="high-score">BEST: <span>0</span></h4>
+<!-- <button>RESTART</button> -->
 </div>
 
     <script src="javascript/obstacle.js"></script>   
