--- a/index.html
+++ b/index.html
@@ -13,17 +13,25 @@
 <h1>Flappy Bird</h1>
 <h2><span>0</span></h2>
 
+<!-- <div class="container"> -->
 <div id="game-over">
 <h3>GAME OVER</h3>
 <h4>SCORE: <span>0</span></h4>
 <h4 id="high-score">BEST: <span>0</span></h4>
 <!-- <button>RESTART</button> -->
 </div>
+<!-- </div> -->
+<h5 id="h5-1">USE THE SPACE KEY TO MOVE FABY</h5>
+<h5 id="h5-2">PRESS THE RETURN KEY TO RESTART</h5>
+
+<button id="music-switch">MUSIC OFF/ON</button>
+<button id="sfx-switch">SFX OFF/ON</button>
 
     <script src="javascript/obstacle.js"></script>   
     <script src="javascript/background.js"></script>
     <script src="javascript/player.js"></script>
     <script src="javascript/game.js"></script>
     <script src="javascript/main.js"></script>
+
 </body>
 </html>
