--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <!-- <button>RESTART</button> -->
 </div>
 <!-- </div> -->
-<h5 id="h5-1">USE THE SPACE KEY TO MOVE FABY</h5>
+<h5 id="h5-1">USE THE SPACE KEY TO CONTROL FABY</h5>
 <h5 id="h5-2">PRESS THE RETURN KEY TO RESTART</h5>
 
-<button id="music-switch">MUSIC OFF/ON</button>
-<button id="sfx-switch">SFX OFF/ON</button>
+<!-- <button id="music-switch">MUSIC OFF/ON</button>
+<button id="sfx-switch">SFX OFF/ON</button> -->
 
     <script src="javascript/obstacle.js"></script>   
     <script src="javascript/background.js"></script>
