--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Flappy Bird</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
-    <script src="p5.js-sound/lib/p5.sound.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5/lib/addons/p5.sound.min.js"></script>
 </head>
 <body>
 <h1>Flappy Bird</h1>
